# 2024-01-22-wintersession-cicd

./: .gitignore  LICENSE  README.md  pyproject.toml  slides.md
.github/workflow/: ci.yaml
.github/workflows/: cd.yml  ci.yaml  ci.yml  slides.yml
src/wintersession2024cicd/: __init__.py
tests/: test_basic.py
