[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wintersession2024cicd"
version = "0.0.1"
dependencies = [
    "numpy",
]
[project.optional-dependencies]
test = ["pytest"]


[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]